--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,11 +10,10 @@ html {
 }
 
 a {
-    color: inherit;
+    color: #043b77;
 }
 
 a:hover {
-    color: inherit;
     opacity: 0.6;
 }
 
@@ -695,6 +694,10 @@ select#inputState {
     color: var(--main-theme-color);
     padding: 1rem 0;
     border-top: 1px solid #ddd;
+}
+
+.license-info {
+    /* color: var(--main-theme-color); */
 }
 
 
